--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,9 @@
 .navbar-menu a:hover {
   background: rgb(51, 147, 131);
 }
+.nav-head {
+  margin-bottom: 10px;
+}
 
 .container {
   position: inherit;
@@ -217,14 +220,15 @@
     background: white;
   }
   .name {
-    font-size: 25px;
+    font-size: 24px;
   }
   .course {
-    font-size: large;
-    padding-right: 28px;
+    font-size: 18px;
+    display: block;
   }
   .nav-head {
     margin-left: 5px;
+    margin-bottom: 15px;
   }
   .content {
     display: block;
@@ -317,7 +321,7 @@
   .navbar-menu {
     display: none;
     position: absolute;
-    top: 11%;
+    top: 6rem;
     right: 0;
     width: 100%;
     background: radial-gradient(
@@ -340,16 +344,18 @@
 
   .navbar-menu a {
     display: block;
-    padding: 20px;
+    padding-left: 20px;
+    padding-block-start: 20px;
+    padding-block-end: 5px;
     margin-left: 5px;
     margin-right: 30px;
-    margin-bottom: 10px;
     color: white;
     border-bottom: 1px solid rgb(126, 125, 125);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
       rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
     text-decoration: none;
     transition: 1s ease;
+    font-size: small;
   }
   .navbar-menu a:hover {
     background-color: transparent;
